--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@types/react-world-flags": "^1.6.0",
+    "@vercel/analytics": "^1.3.1",
     "firebase": "^10.13.2",
     "next": "14.1.0",
     "next-intl": "^3.5.3",
